# docs/swagger.json
@@ -51,7 +51,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1beta1.bookBody"
+                            "$ref": "#/definitions/req.Book"
                         }
                     }
                 ],
@@ -84,7 +84,7 @@
                 }
             }
         },
-        "/api/v1beta1/example/err": {
+        "/api/v1beta1/example/err/{id}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -93,6 +93,15 @@
                     "example"
                 ],
                 "summary": "Err请求",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id值",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -152,7 +161,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1beta1.JSONBody"
+                            "$ref": "#/definitions/req.JSONBody"
                         }
                     }
                 ],
@@ -239,7 +248,22 @@
                 }
             }
         },
-        "v1beta1.JSONBody": {
+        "req.Book": {
+            "type": "object",
+            "required": [
+                "name",
+                "url"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "req.JSONBody": {
             "type": "object",
             "required": [
                 "email",
@@ -253,21 +277,6 @@
                 "username": {
                     "type": "string",
                     "example": "admin"
-                }
-            }
-        },
-        "v1beta1.bookBody": {
-            "type": "object",
-            "required": [
-                "name",
-                "url"
-            ],
-            "properties": {
-                "name": {
-                    "type": "string"
-                },
-                "url": {
-                    "type": "string"
                 }
             }
         }
